# cs2-server-cli

./: AGENTS.md  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  server.rs  steam.rs
